--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion goes roar"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion goes roar"
+      title="Lion in the grass"
+    />
   </body>
 </html>
